# tools-qxcfg

./: CMakeLists.txt  LICENSE  README.md  manifest.xml
src/: CMakeLists.txt  Configuration.cpp  Configuration.hpp  Dummy.cpp  Dummy.hpp  Main.cpp
src/utils/: XMLUtils.cpp  XMLUtils.hpp
test/: CMakeLists.txt  suite.cpp  test_Configuration.cpp  test_Dummy.cpp  test_Utils.cpp  test_utils.hpp
